<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">

    <GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:rowCount="2"
    android:columnCount="2">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="fill_vertical|fill_horizontal">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="130dp"
                android:contentDescription="@string/imgburgir"
                android:scaleType="centerCrop"
                android:src="@drawable/burger"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burger_n_rp_45_000"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="fill_vertical|fill_horizontal">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="130dp"
                android:contentDescription="@string/imgayam"
                android:scaleType="centerCrop"
                android:src="@drawable/chicken_wings"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chicken_wings_n_rp_25_000"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="fill_vertical|fill_horizontal">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="130dp"
                android:contentDescription="@string/imgsalmon"
                android:scaleType="centerCrop"
                android:src="@drawable/salmon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sushisalmon_n_rp_50_000"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="fill_vertical|fill_horizontal">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="130dp"
                android:contentDescription="@string/imgpizza"
                android:scaleType="centerCrop"
                android:src="@drawable/pizzabck"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_n_rp_42_000"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>
</RelativeLayout>

